{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 88,
  "lineage": "b0a70f20-15fe-2192-2847-cce684606f0b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pub-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-074f77adfeee318d3",
            "arn": "arn:aws:ec2:ap-south-1:857561174233:instance/i-08a87e33c6a5d8b48",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08a87e33c6a5d8b48",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "k8s-new",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0598eb7cda5ed47ee",
            "private_dns": "ip-10-0-10-77.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.77",
            "public_ip": "3.110.214.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ec89ac7a3fa82b93",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a9692fe1377bfab4",
            "tags": {
              "Name": "pub-instance"
            },
            "tags_all": {
              "Name": "pub-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08210f24bd230dcbf"
            ]
          },
          "dependencies": [
            "aws_subnet.pub-sub",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:857561174233:internet-gateway/igw-04242f6db86119f3a",
            "id": "igw-04242f6db86119f3a",
            "owner_id": "857561174233",
            "tags": {
              "Name": "new-IGW"
            },
            "tags_all": {
              "Name": "new-IGW"
            },
            "vpc_id": "vpc-0973411030cf586e9"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:857561174233:route-table/rtb-007f6cf65f61b5061",
            "id": "rtb-007f6cf65f61b5061",
            "owner_id": "857561174233",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pri-RT"
            },
            "tags_all": {
              "Name": "pri-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0973411030cf586e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:857561174233:route-table/rtb-05df484d0bca2ce10",
            "id": "rtb-05df484d0bca2ce10",
            "owner_id": "857561174233",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04242f6db86119f3a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub-RT"
            },
            "tags_all": {
              "Name": "pub-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0973411030cf586e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.new-IGW",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e8a46202ec88171",
            "route_table_id": "rtb-007f6cf65f61b5061",
            "subnet_id": "subnet-03883191b609f5a19"
          },
          "dependencies": [
            "aws_route_table.pri-RT",
            "aws_subnet.pri-sub",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fbbf301b8f0ad55",
            "route_table_id": "rtb-05df484d0bca2ce10",
            "subnet_id": "subnet-0a9692fe1377bfab4"
          },
          "dependencies": [
            "aws_internet_gateway.new-IGW",
            "aws_route_table.pub-RT",
            "aws_subnet.pub-sub",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:857561174233:subnet/subnet-03883191b609f5a19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.12.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03883191b609f5a19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "857561174233",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub"
            },
            "tags_all": {
              "Name": "pri-sub"
            },
            "vpc_id": "vpc-0973411030cf586e9"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:857561174233:subnet/subnet-0a9692fe1377bfab4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9692fe1377bfab4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "857561174233",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub"
            },
            "tags_all": {
              "Name": "pub-sub"
            },
            "vpc_id": "vpc-0973411030cf586e9"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:857561174233:vpc/vpc-0973411030cf586e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f977215b749bae25",
            "default_route_table_id": "rtb-0ef3e89a30891c086",
            "default_security_group_id": "sg-08210f24bd230dcbf",
            "dhcp_options_id": "dopt-0d205fe9583644176",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0973411030cf586e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ef3e89a30891c086",
            "owner_id": "857561174233",
            "tags": {
              "Name": "new vpc"
            },
            "tags_all": {
              "Name": "new vpc"
            }
          }
        }
      ]
    }
  ]
}